--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -591,7 +591,20 @@ footer .copyright {
   position: relative;
 }
 
+.show-mobile {
+  display: none;
+}
+.hide-mobile {
+  display: block;
+}
+
 @media (max-width: 768px) {
+  .show-mobile {
+    display: block;
+  }
+  .hide-mobile {
+    display: none;
+  }
   .header-nav {
     position: relative;
     right: 0;
