--- a/src/css/business_uk.css
+++ b/src/css/business_uk.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,800");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,800&display=swap");
 @import "./nav.css?20190517";
 
 .btn-primary {
@@ -36,14 +36,6 @@
   background-size: cover;
   background-position: center;
   background-image: url(../images/business.jpg);
-  background-image: -webkit-image-set(
-    url(../images/business.jpg) 1x,
-    url(../images/business.jpg) 2x
-  );
-  background-image: image-set(
-    url(../images/business.jpg) 1x,
-    url(../images/business.jpg) 2x
-  );
 }
 
 .introduction-wrap::after {
