--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800&display=swap");
 @import "./nav.css?20190517";
 
 .hero {
@@ -6,10 +6,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../images/contact_crop.jpg);
-  background-image: -webkit-image-set(url(../images/contact_crop.jpg) 1x,
-      url(../images/contact_crop.jpg) 2x);
-  background-image: image-set(url(../images/contact_crop.jpg) 1x,
-      url(../images/contact_crop.jpg) 2x);
   width: 100%;
 }
 
