--- a/src/css/get-in-touch_uk.css
+++ b/src/css/get-in-touch_uk.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,500i,600,800");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,500i,600,800&display=swap");
 @import "./nav.css?20190517";
 
 .hero {
@@ -6,14 +6,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../images/get-in-touch.jpg);
-  background-image: -webkit-image-set(
-    url(../images/get-in-touch.jpg) 1x,
-    url(../images/get-in-touch.jpg) 2x
-  );
-  background-image: image-set(
-    url(../images/get-in-touch.jpg) 1x,
-    url(../images/get-in-touch.jpg) 2x
-  );
   width: 100%;
   color: #fff;
 }
