--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,800i');
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,800i&display=swap');
 @import './nav.css?20190517';
 
 .link-to {
