--- a/src/css/legal_uk.css
+++ b/src/css/legal_uk.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800&display=swap");
 @import "./nav.css?20190517";
 
 .hero {
@@ -6,22 +6,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../images/legal_crop.jpg);
-  background-image: -webkit-image-set(
-    url(../images/legal_crop.jpg) 1x,
-    url(../images/legal_crop.jpg) 2x
-  );
-  background-image: image-set(
-    url(../images/legal_crop.jpg) 1x,
-    url(../images/legal_crop.jpg) 2x
-  );
   background-position-y: bottom;
   width: 100%;
 }
-p,
-li,
-a {
-  font-size: 19px;
-}
+
 .title {
   font-size: 35px;
   font-weight: 600;
@@ -83,6 +71,7 @@ a {
 .legal__link:hover {
   text-decoration: none;
 }
+
 @media screen and (max-width: 768px) {
   .hero__title {
     text-align: center;
