--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -5,12 +5,20 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/contact_crop.jpg);
+  background-image: url(../images/contact/contact.jpg);
+  background-image: -webkit-image-set(
+    url(../images/contact/contact.jpg) 1x,
+    url(../images/contact/contact@2x.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/contact/contact.jpg) 1x,
+    url(../images/contact/contact@2x.jpg) 2x
+  );
   width: 100%;
 }
 
 .hero__title {
-  color: #fff;
+  color: #000;
   font-weight: 800;
   font-size: 70px;
   padding: 200px 140px;
