--- a/src/css/business_uk.css
+++ b/src/css/business_uk.css
@@ -35,7 +35,15 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/business.jpg);
+  background-image: url(../images/business_bg.jpg);
+  background-image: -webkit-image-set(
+    url(../images/business_bg.jpg) 1x,
+    url(../images/business_bg.jpg@2x.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/business_bg.jpg) 1x,
+    url(../images/business_bg.jpg@2x.jpg) 2x
+  );
 }
 
 .introduction-wrap::after {
