--- a/src/css/get-in-touch_uk.css
+++ b/src/css/get-in-touch_uk.css
@@ -5,7 +5,15 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/get-in-touch.jpg);
+  background-image: url(../images/get-in-touch/get-in-touch-bg.jpg);
+  background-image: -webkit-image-set(
+    url(../images/get-in-touch/get-in-touch-bg.jpg) 1x,
+    url(../images/get-in-touch/get-in-touch-bg@2x.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/get-in-touch/get-in-touch-bg.jpg) 1x,
+    url(../images/get-in-touch/get-in-touch-bg@2x.jpg) 2x
+  );
   width: 100%;
   color: #fff;
 }
