--- a/src/css/faq_uk.css
+++ b/src/css/faq_uk.css
@@ -10,8 +10,8 @@
   padding: 200px 140px;
 }
 
-.faq__wrapper {
-  max-width: 1089px;
+.faq__wrapper { 
+  max-width: 1440px;
   margin: 100px 140px;
   text-align: left;
 }
@@ -20,7 +20,8 @@
   margin: 50px 0;
 }
 
-h1, h2 {
+h1,
+h2 {
   margin-bottom: 30px;
 }
 
@@ -28,13 +29,14 @@ h1, h2 {
   margin-top: 16px;
   list-style: none;
 }
-.link-list a{
-  text-decoration: underline
-}
+
+
 .faq-qa {
   margin: 20px 0;
 }
-
+.faq-qa p {
+  margin-bottom: 10px;
+}
 
 h3 {
   margin-bottom: 10px;
@@ -52,7 +54,6 @@ a,
 i,
 li {
   font-weight: 300;
-  font-size: 20px;
 }
 
 .faq__container {
@@ -66,6 +67,9 @@ li {
   padding-top: 8px;
 }
 
+.faq-link { 
+  text-decoration: underline
+}
 
 @media screen and (max-width: 1600px) {
   .hero {
