--- a/src/css/404_uk.css
+++ b/src/css/404_uk.css
@@ -17,51 +17,59 @@
 }
 
 .hero {
-  color: #000;
-  padding: 200px 140px;
+  color: #fff;
+  padding: 220px 140px;
 }
 
 .hero__title {
   font-weight: 800;
-  font-size: 70px;
+  font-size: 55px;
 }
 
-.hero__text {
-  font-size: 30px;
-  padding: 30px 0 50px;
-  max-width: 780px;
-}
-
-.hero__btn {
-  display: block;
-  font-size: 20px;
-  line-height: normal;
-  font-weight: 600;
+.error {
+  padding: 100px 0;
   text-align: center;
-  color: #000;
-  width: 100%;
-  max-width: 398px;
-  min-width: 250px;
-  height: 67.53px;
-  background-color: #9bffbe;
-  border-radius: 50px;
-  border: none;
-  cursor: pointer;
-  transition: all 0.1s;
-  padding: 20px 0;
 }
 
-.hero__btn:hover {
-  background: rgba(155, 255, 190, 0.8);
-  color: rgba(0, 0, 0, 0.7);
+.error__title {
+  font-size: 35px;
+  font-weight: 600;
+  padding-bottom: 30px;
 }
 
-.hero__btn:active {
-  bottom: -1px;
-  position: relative;
+.error__text {
+  font-size: 25px;
+  line-height: 40px;
 }
 
-@media screen and (max-width: 768px) {
+.error__back-link {
+  text-decoration: underline;
+}
+
+.error__back-link:hover {
+  text-decoration: none;
+}
+
+.error__list {
+  list-style: none;
+  padding-top: 50px;
+}
+
+.error__item {
+  padding-bottom: 20px;
+}
+
+.error__link {
+  font-size: 25px;
+  color: #1697c5;
+  text-decoration: underline;
+}
+
+.error__link:hover {
+  text-decoration: none;
+}
+
+@media screen and (max-width: 769px) {
   .hero {
     padding: 15vh 30px;
     text-align: center;
@@ -71,7 +79,7 @@
     font-size: 50px;
   }
 
-  .hero__btn {
-    margin: 0 auto;
+  .error {
+    padding: 100px 20px;
   }
 }
