--- a/src/css/faq_uk.css
+++ b/src/css/faq_uk.css
@@ -75,6 +75,10 @@ li {
   font-weight: 300;
 }
 
+.faq-content {
+  padding-bottom: 100px;
+}
+
 .faq__container {
   display: grid;
   grid-template-columns: 1fr 1fr;
