--- a/src/css/faq_uk.css
+++ b/src/css/faq_uk.css
@@ -6,6 +6,7 @@
   font-weight: 800;
   font-size: 70px;
   padding: 200px 140px;
+  background-size: cover;
   background-image: url(../images/faq_bg.jpg);
   background-image: -webkit-image-set(url(../images/faq_bg.jpg) 1x,
       url(../images/faq_bg@2x.jpg) 2x);
