--- a/src/css/home_uk.css
+++ b/src/css/home_uk.css
@@ -5,8 +5,16 @@
   min-height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center -160px;
-  background-image: url(../images/front.jpg);
+  background-position: center;
+  background-image: url(../images/home_bg.jpg);
+  background-image: -webkit-image-set(
+    url(../images/home_bg.jpg) 1x,
+    url(../images/home_bg@2x.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/home_bg.jpg) 1x,
+    url(../images/works/home_bg@2x.jpg) 2x
+  );
 }
 
 .banner {
@@ -294,28 +302,9 @@
     position: inherit;
     margin-top: 15px;
   }
-  .banner-wrap {
-    background-size: cover;
-    background-position: center bottom;
-  }
-  .banner {
-    justify-content: center;
-  }
-  .banner h1 {
-    text-align: center;
-  }
 
   .feedback-wrap {
     padding: 100px 35px;
-  }
-
-  .banner-content {
-    width: initial;
-    max-width: initial;
-  }
-
-  .banner h1 {
-    font-size: 45px;
   }
 
   .forWhomItWorks-wrap {
@@ -374,11 +363,38 @@
     width: 100%;
   }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 1024px) {
   .banner {
     padding: 15vh 30px;
+    justify-content: center;
+  }
+
+  .banner-wrap {
+    background-size: cover;
+    background-position: center bottom;
+    background-image: url(../images/front.jpg);
+    background-image: -webkit-image-set(
+      url(../images/front.jpg) 1x,
+      url(../images/front.jpg) 2x
+    );
+    background-image: image-set(
+      url(../images/front.jpg) 1x,
+      url(../images/front.jpg) 2x
+    );
+  }
+
+  .banner-content {
+    width: initial;
+    max-width: initial;
+  }
+
+  .banner h1 {
+    text-align: center;
+    font-size: 45px;
   }
 }
+
 @media screen and (max-width: 719px) {
   .forWhomItWorks h2 {
     width: 90%;
