--- a/src/css/business.css
+++ b/src/css/business.css
@@ -35,14 +35,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/business_bg.jpg);
+  background-image: url(../images/business/business_bg.jpg);
   background-image: -webkit-image-set(
-    url(../images/business_bg.jpg) 1x,
-    url(../images/business_bg@2x.jpg) 2x
+    url(../images/business/business_bg.jpg) 1x,
+    url(../images/business/business_bg@2x.jpg) 2x
   );
   background-image: image-set(
-    url(../images/business_bg.jpg) 1x,
-    url(../images/business_bg@2x.jpg) 2x
+    url(../images/business/business_bg.jpg) 1x,
+    url(../images/business/business_bg@2x.jpg) 2x
   );
 }
 
@@ -77,7 +77,7 @@
 
 .whyOpenPay-wrap::after {
   content: "";
-  background: url(../images/signup-bg-logo.svg) no-repeat;
+  background: url(../images/general/signup-bg-logo.svg) no-repeat;
   background-size: cover;
   width: 583px;
   height: 610px;
