--- a/src/css/error.css
+++ b/src/css/error.css
@@ -4,14 +4,14 @@
 .hero {
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/404_bg.jpg);
+  background-image: url(../images/error/404_bg.jpg);
   background-image: -webkit-image-set(
-    url(../images/404_bg.jpg) 1x,
-    url(../images/404_bg@2x.jpg) 2x
+    url(../images/error/404_bg.jpg) 1x,
+    url(../images/error/404_bg@2x.jpg) 2x
   );
   background-image: image-set(
-    url(../images/404_bg.jpg) 1x,
-    url(../images/404_bg@2x.jpg) 2x
+    url(../images/error/404_bg.jpg) 1x,
+    url(../images/error/404_bg@2x.jpg) 2x
   );
   width: 100%;
 }
