--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -7,11 +7,11 @@
   font-size: 70px;
   padding: 200px 140px;
   background-size: cover;
-  background-image: url(../images/faq_bg.jpg);
-  background-image: -webkit-image-set(url(../images/faq_bg.jpg) 1x,
-      url(../images/faq_bg@2x.jpg) 2x);
-  background-image: image-set(url(../images/faq_bg.jpg) 1x,
-      url(../images/faq_bg@2x.jpg) 2x);
+  background-image: url(../images/faq/faq_bg.jpg);
+  background-image: -webkit-image-set(url(../images/faq/faq_bg.jpg) 1x,
+      url(../images/faq/faq_bg@2x.jpg) 2x);
+  background-image: image-set(url(../images/faq/faq_bg.jpg) 1x,
+      url(../images/faq/faq_bg@2x.jpg) 2x);
   width: 100%;
 }
 
