--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -23,14 +23,14 @@
 .welcome-wrap {
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(../images/landingpage_bg.jpg);
+  background-image: url(../images/landingpage/landingpage_bg.jpg);
   background-image: -webkit-image-set(
-    url(../images/landingpage_bg.jpg) 1x,
-    url(../images/landingpage_bg@2x.jpg) 2x
+    url(../images/landingpage/landingpage_bg.jpg) 1x,
+    url(../images/landingpage/landingpage_bg@2x.jpg) 2x
   );
   background-image: image-set(
-    url(../images/landingpage_bg.jpg) 1x,
-    url(../images/landingpage_bg@2x.jpg) 2x
+    url(../images/landingpage/landingpage_bg.jpg) 1x,
+    url(../images/landingpage/landingpage_bg@2x.jpg) 2x
   );
   padding: 65px 0 60px;
 }
@@ -71,7 +71,7 @@
 
 .signup::after {
   content: '';
-  background: url(../images/signup-bg-logo.svg) no-repeat;
+  background: url(../images/general/signup-bg-logo.svg) no-repeat;
   width: 476px;
   height: 498px;
   z-index: 1;
