--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -536,7 +536,7 @@ header {
   position: absolute;
   top: 25px;
   left: 25px;
-  background: url(../images/cookie-icon.svg) no-repeat;
+  background: url(../images/general/cookie-icon.svg) no-repeat;
   background-size: cover;
   height: 22px;
   width: 20px;
