--- a/src/css/legal.css
+++ b/src/css/legal.css
@@ -25,7 +25,7 @@
 }
 
 .hero__title {
-  color: #000;
+  color: var(--primary-dark);
   font-weight: 800;
   font-size: 55px;
   padding: 200px 140px;
@@ -72,7 +72,7 @@
 }
 
 .legal__link {
-  color: #1697c5;
+  color: var(--link-light);
   text-decoration: underline;
 }
 
