--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -6,7 +6,7 @@
 :root {
   /* colors */
   --primary-dark: #000;
-  --primary--light: #fff;
+  --primary-light: #fff;
 
   --secondary-dark: #3c465a;
   --secondary-light: #179ecf;
@@ -14,6 +14,8 @@
   --neutral-light: #f0f0f0;
 
   --button: #9bffbe;
+
+  --input-bg: #efefef;
 
   --link-light: #1697c5;
 
@@ -31,6 +33,9 @@
   --h3: 25px;
   --p: 20px;
   --hero-subtitle: 30px;
+
+  /* other */
+  --opacity: .8;
 }
 
 @media screen and (max-width: 768px) {
@@ -77,7 +82,7 @@ header {
   background-color: var(--secondary-dark);
   padding: 80px 32px;
   text-align: center;
-  color: var(--primary--light);
+  color: var(--primary-light);
 }
 
 /*top menu hamburger*/
@@ -96,11 +101,11 @@ header {
   line-height: 29px;
   font-weight: 600;
   text-align: center;
-  color: #fff;
+  color: var(--primary-light);
 }
 
 .paragraphSpec-4 {
-  font-size: 14px;
+  font-size: 15px;
   line-height: 23px;
   font-weight: 600;
   text-align: left;
@@ -109,15 +114,13 @@ header {
 }
 
 .paragraphSpec-4:hover {
-  color: rgba(59, 69, 90, 0.8);
+  opacity: .8;
 }
 
 /*...end common styles...*/
 /*...header...*/
 .header-wrap {
   padding: 39px 0 34px;
-  -webkit-transition: height 400ms ease-out;
-  -o-transition: height 400ms ease-out;
   transition: height 400ms ease-out;
 }
 
@@ -184,7 +187,7 @@ header {
 /*...end header...*/
 /*...footer...*/
 .footer-wrap {
-  background-color: #3c465a;
+  background-color: var(--secondary-dark);
   padding: 60px 0 45px;
 }
 
@@ -299,8 +302,8 @@ header {
   margin: 0 10px;
   max-width: 360px;
   border-radius: 5px;
-  background-color: #fff;
-  color: #3c465a;
+  background-color: var(--primary-light);
+  color: var(--secondary-dark);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -336,7 +339,7 @@ header {
   color: #40354e;
   font-weight: 600;
   font-size: 14px;
-  background-color: #fff;
+  background-color: var(--primary-light);
   transition: all 0.1s;
 }
 
